# aps

./: .gitignore  README.md  build-xfact.sh  pyproject.toml  run-xfact.sh
terminal_emulator/: __init__.py  cli.py  frontend.py  parser.py  pty_backend.py  screen.py
tests/: test_parser.py  test_screen.py  test_xfact_manifest.py
xfact/: __init__.py  __main__.py  cli.py  manifest.json  manifest.py  os_build.py
